--- a/config/database.yml
+++ b/config/database.yml
@@ -16,16 +16,16 @@ default: &default
 development:
   <<: *default
   
-  database: bd/development.sqlite3
+  database: db/development.sqlite3
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: bd/test.sqlite3
+  database: db/test.sqlite3
 
 production:
   <<: *default
   
-  database: bd/production.sqlite3
+  database: db/production.sqlite3
