--- a/config/database.yml
+++ b/config/database.yml
@@ -6,7 +6,7 @@
 #
 default: &default
   
-  adapter:  sqlite3
+  adapter:  postgresql
   
   encoding: unicode
   pool: 5
@@ -16,16 +16,19 @@ default: &default
 development:
   <<: *default
   
-  database: db/development.sqlite3
+  database: db/development
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test.sqlite3
+  database: db/test
+
+  production:
+  url: <%= ENV['MY_APP_DATABASE_URL'] %>
 
 production:
   <<: *default
   
-  database: db/production.sqlite3
+  database: db/production
