--- a/config/database.yml
+++ b/config/database.yml
@@ -27,7 +27,7 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: db/test
+  database: mydatabase
 
   #production:
   #url: <%= ENV['MY_APP_DATABASE_URL'] %>
