--- a/config/database.yml
+++ b/config/database.yml
@@ -14,7 +14,7 @@ default: &default
 development:
   <<: *default
   
-  database: mydatabase
+  database: mydatabaseone_development
   host: localhost  
   pool: 5
   username: postgres
@@ -25,16 +25,17 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: mydatabase
+  database: mydatabaseone
 
 production:
   <<: *default
   
   adapter: postgresql
   encoding: unicode
-  database: mydatabase
-  #host: localhost
+  database: mydatabaseone_production
+  host: localhost
   pool: 5
   username: postgres
-  password: <%= ENV['mydatabase_Password'] %>
+  password: lila
+  #password: <%= ENV['mydatabase_Password'] %>
   
