--- a/config/database.yml
+++ b/config/database.yml
@@ -14,7 +14,7 @@ default: &default
 development:
   <<: *default
   
-  database: mydatabaseone_development
+  database: mydatabase
   host: localhost  
   pool: 5
   username: postgres
@@ -25,14 +25,14 @@ development:
 # Do not set this db to the same as development or production.
 test:
   <<: *default
-  database: mydatabaseone
+  database: mydatabase
 
 production:
   <<: *default
   
   adapter: postgresql
   encoding: unicode
-  database: mydatabaseone_production
+  database: mydatabase
   host: localhost
   pool: 5
   username: postgres
